--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,15 +1,29 @@
 version: 2.1
 orbs:
-  ruby: circleci/ruby@0.1.2 
+  ruby: circleci/ruby@0.1.2
+  browser-tools: circleci/browser-tools@1.1.3
 
 jobs:
-  build:
+  test:
     docker:
       - image: circleci/ruby:2.6.3-stretch-node
     executor: ruby/default
     steps:
-      - checkout
+      - browser-tools/install-chrome
+      - browser-tools/install-chromedriver
       - run:
-          name: Which bundler?
-          command: bundle -v
-      - ruby/bundle-install
+          name: Check Chrome install
+          command: |
+            google-chrome --version
+            chromedriver --version
+
+
+#  - run:
+#      name: Which bundler?
+#      command: bundle -v
+#      - ruby/bundle-install
+
+
+#docker:
+#  - image: circleci/ruby:2.6.3-stretch-node
+#  executor: ruby/default
