--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,13 +31,15 @@ jobs:
 
 workflows:
   version: 2
-  build_and_test:
+  build_install_gems_and_test:
     jobs:
       - build
       - install_gems:
-          requires: build
+          requires:
+            - build
       - test:
-          requires: install_gems
+          requires:
+            - install_gems
 
 
 #  - run:
