--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,7 @@ jobs:
             google-chrome --version
             chromedriver --version
             bundle -v
+            gem install bundler:2.1.4
   install_gems:
     docker:
       - image: circleci/ruby:2.6.3-stretch-node
