--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,12 +16,15 @@ jobs:
             google-chrome --version
             chromedriver --version
             bundle -v
-            gem install bundler:2.1.4
+#            gem install bundler:2.1.4
   install_gems:
     docker:
       - image: circleci/ruby:2.6.3-stretch-node
     steps:
       - checkout
+      - run: bundle -v
+      - run: gem install bundler:2.1.4
+      - run: bundle -v
       - run: bundle install
   test:
     docker:
