--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,19 +4,6 @@ orbs:
   browser-tools: circleci/browser-tools@1.1.3
 
 jobs:
-#  build:
-#    docker:
-#      - image: circleci/ruby:2.6.3-stretch-node
-#    steps:
-#      - browser-tools/install-chrome
-#      - browser-tools/install-chromedriver
-#      - run:
-#          name: Check Chrome install
-#          command: |
-#            google-chrome --version
-#            chromedriver --version
-#            bundle -v
-
   test:
     docker:
       - image: circleci/ruby:2.6.3-stretch-node
@@ -41,25 +28,12 @@ jobs:
             export DOMAIN=teladoc.io
             export CLUSTER=uat
             export SUBDOMAIN=master
+            export USERNAME=member0
+            export PASSWORD=test123456
             TEST_ENV=ondemand CUCUMBER_BROWSER=chrome bundle exec cucumber features/Initial.feature
 
 workflows:
   version: 2
   test:
     jobs:
-#      - build
       - test
-#      - test:
-#          requires:
-#            - build
-
-
-#  - run:
-#      name: Which bundler?
-#      command: bundle -v
-#      - ruby/bundle-install
-
-
-#docker:
-#  - image: circleci/ruby:2.6.3-stretch-node
-#  executor: ruby/default
