Add cucumber options into cucumber.yml file

--- a/config/cucumber.yml
+++ b/config/cucumber.yml
@@ -1,1 +1,1 @@
-default: "-r features --format pretty --color -r features -f html --out report/cucumber_reports/html_report.html -r features -f rerun --out report/cucumber_reports/rerun.txt -r features --format AllureCucumber::CucumberFormatter --out report/allure-results"
+default: -r features --format pretty --color -r features -f html --out report/cucumber_reports/html_report.html -r features -f rerun --out report/cucumber_reports/rerun.txt -r features --format AllureCucumber::CucumberFormatter --out report/allure-results
