Add cucumber options into cucumber.yml file

--- a/config/cucumber.yml
+++ b/config/cucumber.yml
@@ -1,1 +1,1 @@
-default: -r features --format junit --out report/cucumber-reports/web --format pretty --color -r features -f junit --out report/cucumber-reports/failures -r features --format AllureCucumber::CucumberFormatter --out report/allure-results
+default: -r features --format html --out report/cucumber-reports/html/file.html --format pretty --color -r features -f rerun --out report/cucumber-reports/rerun/rerun.txt -r features --format AllureCucumber::CucumberFormatter --out report/allure-results
