Add new strings

--- a/features/strings/member/dashboard.yaml
+++ b/features/strings/member/dashboard.yaml
@@ -6,3 +6,26 @@ main_navigation:
   - My Family
   - USA
   - REQUEST A VISIT
+left_rail_column:
+  - Have questions?
+  - Frequently asked questions
+  - Contact Us
+  - 1-800-Teladoc (800-835-2362)
+main_content_column:
+  - Good Morning, Octavio
+  - Get Care Now (General Medical)
+  - Get care 24/7 for non-emergency conditions like cold & flu, sinus infection, allergies and more
+  - As early as
+  - Today
+  - Options
+  - COVID-19 Assessment
+  - If you think you are infected with COVID-19, Teladoc physicians can answer questions about the disease, evaluate your risk and advise you on next steps. Consider taking our self-assessment below.
+  - Take the Self-Assessment
+  - Learn more
+  - People ❤️ Teladoc!
+  - Teladoc is the best thing ever! The doctors don't rush you and I feel like they actually listen to me. There is very little wait time from the time you request an appointment to the time they call you
+  - – Karen F.
+  - Refer a FriendShare your story
+  - Helpful Information
+  - Learn about antibioticsFrequently Asked QuestionsCommunity Guidelines
+
